[project]
name = "vmaf-mcp"
version = "0.1.0"
description = "MCP server exposing VMAF scoring, model listing, and benchmark runs via JSON-RPC."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause-Plus-Patent" }
authors = [
  { name = "Lusoris", email = "lusoris@pm.me" },
  { name = "Claude (Anthropic)", email = "noreply@anthropic.com" },
]
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.6",
  "anyio>=4.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
vmaf-mcp = "vmaf_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vmaf_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM", "RUF"]
